docs: improve quick start and model discovery